fixed quicktabs on one line on mobile layout; added respondjs module

--- a/sites/all/themes/rearesponsive/css/style.css
+++ b/sites/all/themes/rearesponsive/css/style.css
@@ -190,8 +190,8 @@ ul.nav li.dropdown ul.dropdown-menu {
   margin-top: 20px;
 }
 ul.quicktabs-tabs li {
-  display: block;
-  margin-bottom: 10px;
+  display: inline-block;
+  margin-bottom: 3px;
 }
 
 .quicktabs-tabs {
